src/main/java/com/kasirgalabs/arm/ArmParser.java
// Generated from Arm.g4 by ANTLR 4.6
package com.kasirgalabs.arm;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ArmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, ADDS=2, ADC=3, ADCS=4, SUB=5, SUBS=6, SBC=7, SBCS=8, RSB=9, RSBS=10, 
		RSC=11, RSCS=12, MUL=13, MULS=14, MLA=15, MLAS=16, UMULL=17, UMULLS=18, 
		UMLAL=19, UMLALS=20, SMULL=21, SMULLS=22, SMLAL=23, SMLALS=24, SDIV=25, 
		UDIV=26, MOV=27, MOVS=28, MVN=29, MVNS=30, ASR=31, ASRS=32, LSL=33, LSLS=34, 
		LSR=35, LSRS=36, ROR=37, RORS=38, RRX=39, RRXS=40, CMP=41, CMN=42, TST=43, 
		TEQ=44, AND=45, ANDS=46, EOR=47, EORS=48, ORR=49, ORRS=50, ORN=51, ORNS=52, 
		BIC=53, BICS=54, NON_CONDITIONAL_BRANCH=55, BEQ=56, BNE=57, BCS=58, BHS=59, 
		BCC=60, BLO=61, BMI=62, BPL=63, BVS=64, BVC=65, BHI=66, BLS=67, BGE=68, 
		BLT=69, BGT=70, BLE=71, BAL=72, BL=73, LDR=74, LDRB=75, LDRSB=76, LDRH=77, 
		LDRSH=78, STR=79, STRB=80, STRSB=81, STRH=82, STRSH=83, PUSH=84, POP=85, 
		NOP=86, REGISTER=87, LR=88, PC=89, DECIMAL=90, HEX=91, LABEL=92, ASSIGN=93, 
		LBRACK=94, RBRACK=95, LBRACE=96, RBRACE=97, DASH=98, COMMA=99, COLON=100, 
		COMMENT=101, LINE_COMMENT=102, WS=103, EOL=104;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_instruction = 2, RULE_add = 3, RULE_adds = 4, 
		RULE_adc = 5, RULE_adcs = 6, RULE_sub = 7, RULE_subs = 8, RULE_sbc = 9, 
		RULE_sbcs = 10, RULE_rsb = 11, RULE_rsbs = 12, RULE_rsc = 13, RULE_rscs = 14, 
		RULE_mul = 15, RULE_muls = 16, RULE_mla = 17, RULE_mlas = 18, RULE_umull = 19, 
		RULE_umulls = 20, RULE_umlal = 21, RULE_umlals = 22, RULE_smull = 23, 
		RULE_smulls = 24, RULE_smlal = 25, RULE_smlals = 26, RULE_sdiv = 27, RULE_udiv = 28, 
		RULE_mov = 29, RULE_movs = 30, RULE_mvn = 31, RULE_mvns = 32, RULE_asr = 33, 
		RULE_asrs = 34, RULE_lsl = 35, RULE_lsls = 36, RULE_lsr = 37, RULE_lsrs = 38, 
		RULE_ror = 39, RULE_rors = 40, RULE_rrx = 41, RULE_rrxs = 42, RULE_cmp = 43, 
		RULE_cmn = 44, RULE_tst = 45, RULE_teq = 46, RULE_and = 47, RULE_ands = 48, 
		RULE_eor = 49, RULE_eors = 50, RULE_orr = 51, RULE_orrs = 52, RULE_orn = 53, 
		RULE_orns = 54, RULE_bic = 55, RULE_bics = 56, RULE_b = 57, RULE_beq = 58, 
		RULE_bne = 59, RULE_bcs = 60, RULE_bhs = 61, RULE_bcc = 62, RULE_blo = 63, 
		RULE_bmi = 64, RULE_bpl = 65, RULE_bvs = 66, RULE_bvc = 67, RULE_bhi = 68, 
		RULE_bls = 69, RULE_bge = 70, RULE_blt = 71, RULE_bgt = 72, RULE_ble = 73, 
		RULE_bal = 74, RULE_bl = 75, RULE_ldr = 76, RULE_ldrb = 77, RULE_ldrsb = 78, 
		RULE_ldrh = 79, RULE_ldrsh = 80, RULE_str = 81, RULE_strb = 82, RULE_strsb = 83, 
		RULE_strh = 84, RULE_strsh = 85, RULE_push = 86, RULE_pop = 87, RULE_nop = 88, 
		RULE_rd = 89, RULE_rn = 90, RULE_rm = 91, RULE_rs = 92, RULE_rdlo = 93, 
		RULE_rdhi = 94, RULE_reglist = 95, RULE_operand2 = 96, RULE_shiftedrm = 97, 
		RULE_option = 98, RULE_shift = 99, RULE_imm8m = 100, RULE_offset = 101, 
		RULE_number = 102, RULE_decimal = 103, RULE_hex = 104, RULE_label = 105;
	public static final String[] ruleNames = {
		"prog", "line", "instruction", "add", "adds", "adc", "adcs", "sub", "subs", 
		"sbc", "sbcs", "rsb", "rsbs", "rsc", "rscs", "mul", "muls", "mla", "mlas", 
		"umull", "umulls", "umlal", "umlals", "smull", "smulls", "smlal", "smlals", 
		"sdiv", "udiv", "mov", "movs", "mvn", "mvns", "asr", "asrs", "lsl", "lsls", 
		"lsr", "lsrs", "ror", "rors", "rrx", "rrxs", "cmp", "cmn", "tst", "teq", 
		"and", "ands", "eor", "eors", "orr", "orrs", "orn", "orns", "bic", "bics", 
		"b", "beq", "bne", "bcs", "bhs", "bcc", "blo", "bmi", "bpl", "bvs", "bvc", 
		"bhi", "bls", "bge", "blt", "bgt", "ble", "bal", "bl", "ldr", "ldrb", 
		"ldrsb", "ldrh", "ldrsh", "str", "strb", "strsb", "strh", "strsh", "push", 
		"pop", "nop", "rd", "rn", "rm", "rs", "rdlo", "rdhi", "reglist", "operand2", 
		"shiftedrm", "option", "shift", "imm8m", "offset", "number", "decimal", 
		"hex", "label"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'='", "'['", "']'", 
		"'{'", "'}'", "'#'", "','", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ADD", "ADDS", "ADC", "ADCS", "SUB", "SUBS", "SBC", "SBCS", "RSB", 
		"RSBS", "RSC", "RSCS", "MUL", "MULS", "MLA", "MLAS", "UMULL", "UMULLS", 
		"UMLAL", "UMLALS", "SMULL", "SMULLS", "SMLAL", "SMLALS", "SDIV", "UDIV", 
		"MOV", "MOVS", "MVN", "MVNS", "ASR", "ASRS", "LSL", "LSLS", "LSR", "LSRS", 
		"ROR", "RORS", "RRX", "RRXS", "CMP", "CMN", "TST", "TEQ", "AND", "ANDS", 
		"EOR", "EORS", "ORR", "ORRS", "ORN", "ORNS", "BIC", "BICS", "NON_CONDITIONAL_BRANCH", 
		"BEQ", "BNE", "BCS", "BHS", "BCC", "BLO", "BMI", "BPL", "BVS", "BVC", 
		"BHI", "BLS", "BGE", "BLT", "BGT", "BLE", "BAL", "BL", "LDR", "LDRB", 
		"LDRSB", "LDRH", "LDRSH", "STR", "STRB", "STRSB", "STRH", "STRSH", "PUSH", 
		"POP", "NOP", "REGISTER", "LR", "PC", "DECIMAL", "HEX", "LABEL", "ASSIGN", 
		"LBRACK", "RBRACK", "LBRACE", "RBRACE", "DASH", "COMMA", "COLON", "COMMENT", 
		"LINE_COMMENT", "WS", "EOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Arm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(ArmParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(ArmParser.EOL, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArmListener ) ((ArmListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArmListener ) ((ArmListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArmVisitor ) return ((ArmVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << ADDS) | (1L << ADC) | (1L << ADCS) | (1L << SUB) | (1L << SUBS) | (1L << RSB) | (1L << RSBS) | (1L << RSC) | (1L << RSCS) | (1L << MUL) | (1L << MULS) | (1L << MLA) | (1L << MLAS) | (1L << UMULL) | (1L << UMULLS) | (1L << UMLAL) | (1L << UMLALS) | (1L << SMULL) | (1L << SMULLS) | (1L << SMLAL) | (1L << SMLALS) | (1L << SDIV) | (1L << UDIV) | (1L << MOV) | (1L << MOVS) | (1L << MVN) | (1L << MVNS) | (1L << ASR) | (1L << ASRS) | (1L << LSL) | (1L << LSLS) | (1L << LSR) | (1L << LSRS) | (1L << ROR) | (1L << RORS) | (1L << RRX) | (1L << RRXS) | (1L << CMP) | (1L << CMN) | (1L << TST) | (1L << TEQ) | (1L << AND) | (1L << ANDS) | (1L << EOR) | (1L << EORS) | (1L << ORR) | (1L << ORRS) | (1L << ORN) | (1L << ORNS) | (1L << BIC) | (1L << BICS) | (1L << NON_CONDITIONAL_BRANCH) | (1L << BEQ) | (1L << BNE) | (1L << BCS) | (1L << BHS) | (1L << BCC) | (1L << BLO) | (1L << BMI) | (1L << BPL))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (BVS - 64)) | (1L << (BVC - 64)) | (1L << (BHI - 64)) | (1L << (BLS - 64)) | (1L << (BGE - 64)) | (1L << (BLT - 64)) | (1L << (BGT - 64)) | (1L << (BLE - 64)) | (1L << (BAL - 64)) | (1L << (BL - 64)) | (1L << (LDR - 64)) | (1L << (LDRB - 64)) | (1L << (LDRSB - 64)) | (1L << (LDRH - 64)) | (1L << (LDRSH - 64)) | (1L << (STR - 64)) | (1L << (STRB - 64)) | (1L << (STRSB - 64)) | (1L << (STRH - 64)) | (1L << (STRSH - 64)) | (1L << (PUSH - 64)) | (1L << (POP - 64)) | (1L << (NOP - 64)) | (1L << (LABEL - 64)))) != 0)) {
					{
					setState(212);
					line();
					}
				}

				setState(215);
				match(EOL);
				}
				}
				setState(218); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << ADDS) | (1L << ADC) | (1L << ADCS) | (1L << SUB) | (1L << SUBS) | (1L << RSB) | (1L << RSBS) | (1L << RSC) | (1L << RSCS) | (1L << MUL) | (1L << MULS) | (1L << MLA) | (1L << MLAS) | (1L << UMULL) | (1L << UMULLS) | (1L << UMLAL) | (1L << UMLALS) | (1L << SMULL) | (1L << SMULLS) | (1L << SMLAL) | (1L << SMLALS) | (1L << SDIV) | (1L << UDIV) | (1L << MOV) | (1L << MOVS) | (1L << MVN) | (1L << MVNS) | (1L << ASR) | (1L << ASRS) | (1L << LSL) | (1L << LSLS) | (1L << LSR) | (1L << LSRS) | (1L << ROR) | (1L << RORS) | (1L << RRX) | (1L << RRXS) | (1L << CMP) | (1L << CMN) | (1L << TST) | (1L << TEQ) | (1L << AND) | (1L << ANDS) | (1L << EOR) | (1L << EORS) | (1L << ORR) | (1L << ORRS) | (1L << ORN) | (1L << ORNS) | (1L << BIC) | (1L << BICS) | (1L << NON_CONDITIONAL_BRANCH) | (1L << BEQ) | (1L << BNE) | (1L << BCS) | (1L << BHS) | (1L << BCC) | (1L << BLO) | (1L << BMI) | (1L << BPL))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (BVS - 64)) | (1L << (BVC - 64)) | (1L << (BHI - 64)) | (1L << (BLS - 64)) | (1L << (BGE - 64)) | (1L << (BLT - 64)) | (1L << (BGT - 64)) | (1L << (BLE - 64)) | (1L << (BAL - 64)) | (1L << (BL - 64)) | (1L << (LDR - 64)) | (1L << (LDRB - 64)) | (1L << (LDRSB - 64)) | (1L << (LDRH - 64)) | (1L << (LDRSH - 64)) | (1L << (STR - 64)) | (1L << (STRB - 64)) | (1L << (STRSB - 64)) | (1L << (STRH - 64)) | (1L << (STRSH - 64)) | (1L << (PUSH - 64)) | (1L << (POP - 64)) | (1L << (NOP - 64)) | (1L << (LABEL - 64)) | (1L << (EOL - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArmListener ) ((ArmListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArmListener ) ((ArmListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArmVisitor ) return ((ArmVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(222);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
			case ADDS:
			case ADC:
			case ADCS:
			case SUB:
			case SUBS:
			case RSB:
			case RSBS:
			case RSC:
			case RSCS:
			case MUL:
			case MULS:
			case MLA:
			case MLAS:
			case UMULL:
			case UMULLS:
			case UMLAL:
			case UMLALS:
			case SMULL:
			case SMULLS:
			case SMLAL:
			case SMLALS:
			case SDIV:
			case UDIV:
			case MOV:
			case MOVS:
			case MVN:
			case MVNS:
			case ASR:
			case ASRS:
			case LSL:
			case LSLS:
			case LSR:
			case LSRS:
			case ROR:
			case RORS:
			case RRX:
			case RRXS:
			case CMP:
			case CMN:
			case TST:
			case TEQ:
			case AND:
			case ANDS:
			case EOR:
			case EORS:
			case ORR:
			case ORRS:
			case ORN:
			case ORNS:
			case BIC:
			case BICS:
			case NON_CONDITIONAL_BRANCH:
			case BEQ:
			case BNE:
			case BCS:
			case BHS:
			case BCC:
			case BLO:
			case BMI:
			case BPL:
			case BVS:
			case BVC:
			case BHI:
			case BLS:
			case BGE:
			case BLT:
			case BGT:
			case BLE:
			case BAL:
			case BL:
			case LDR:
			case LDRB:
			case LDRSB:
			case LDRH:
			case LDRSH:
			case STR:
			case STRB:
			case STRSB:
			case STRH:
			case STRSH:
			case PUSH:
			case POP:
			case NOP:
				enterOuterAlt(_localctx, 1);
				{
				setState(220);
				instruction();
				}
				break;
			case LABEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(221);
				label();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
